updated sidebar, icon, and styling. added icon links

--- a/_config.yml
+++ b/_config.yml
@@ -24,3 +24,9 @@ version:          2.1.0
 
 github:
   repo:           https://github.com/poole/hyde
+
+links:
+  github:         https://github.com/intothev01d
+  stackoverflow:  http://stackoverflow.com/users/1415348/intothev01d
+  linkedin:       https://www.linkedin.com/pub/lance-batson/55/467/758
+  email:          lancebatsondev@gmail.com
