--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github:
   repo:           https://github.com/poole/hyde
 
 links:
-  github:         https://github.com/intothev01d
-  stackoverflow:  http://stackoverflow.com/users/1415348/intothev01d
+  github:         https://github.com/lbatson
+  stackoverflow:  http://stackoverflow.com/users/1415348/lbatson
   linkedin:       https://www.linkedin.com/pub/lance-batson/55/467/758
   email:          lancebatsondev@gmail.com
